--- a/tcf_website/templates/base/bugform.html
+++ b/tcf_website/templates/base/bugform.html
@@ -5,7 +5,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="bugModal">Report a Bug </h5>
+        <h5 class="modal-title">Report a Bug </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -27,7 +27,7 @@
               </div>
           </div>
           <div class="form-row justify-content-center">
-            <button type="button" onclick="submitForm()" class="btn btn-primary align-self-center">Submit</button>
+            <button type="button" id="bugSubmitBtn" class="btn btn-primary align-self-center">Submit</button>
           </div>
         </form>
       </div>
@@ -35,8 +35,6 @@
   </div>
 </div>
 
-
 {% block js %}
-<script src="{% static 'common/form.js' %}"></script>
-<script src="{% static 'base/bugform.js' %}"></script>
+<script type="module" src="{% static 'base/bugform.js' %}"></script>
 {% endblock %}
