--- a/tcf_website/templates/base/bugform.html
+++ b/tcf_website/templates/base/bugform.html
@@ -27,6 +27,24 @@
               </div>
           </div>
           <div class="form-row justify-content-center">
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="category1" value="Crash">
+              <label class="form-check-label" for="category1">Crash</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="category2" value="UI/Styling">
+              <label class="form-check-label" for="category2">UI/Styling</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="category3" value="Data Error">
+              <label class="form-check-label" for="category3">Data Error</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="category4" value="Account Error">
+              <label class="form-check-label" for="category4">Account Error</label>
+            </div>
+          </div>
+          <div class="form-row justify-content-center">
             <button type="button" id="bugSubmitBtn" class="btn btn-primary align-self-center">Submit</button>
           </div>
         </form>
